2012-04-02 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: added into function "html_debug_print" the
	equal output to log file, this is with more data.
	
	* include/functions_db.php: cleaned source code style.
	
	* extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_pandora.php: added extension to update pandora from the
	targz of Sourceforge.
	
	Merged from the branch pandora_4.0

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php: Fixed an error selecting the correct menu option
	in workspace menu.

2012-04-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/dialog.css
	 include/javascript/jquery.pandora.js: Changed style in license 
	 advises to new appearance.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_menu.php
	extensions/users_connected.php,
	operation/incidents/incident.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_statistics.php,
	operation/menu.php,
	operation/integria_incidents/incident.incident.php,
	operation/integria_incidents/incident.files.php,
	operation/integria_incidents/incident.list.php,
	operation/messages/message_edit.php,
	operation/messages/message_list.php: Create new menu item called 
	workspace.
	* godmode/reporting/map_builder.php
	operation/visual_console/render_view.php: Fixed some errors related to
	new menu structure.

2012-04-02  Sergio Martin <sergio.martin@artica.es>

	* operation/reporting/reporting_xml.php: Added xml export
	feature to the new report items of inventory and inventory changes

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/menu.php: Delete reporting menu in godmode section.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_menu.php
	operation/menu.php
	godmode/menu.php: Finish changes in reporting menu.
