@@ -56,9 +56,29 @@ if (check_acl ($config['id_user'], 0, "AR")) {
 	
 	enterprise_hook ('inventory_menu');
 	
-	$sub["operation/servers/recon_view"]["text"] = __('Recon View');
+	$sub["operation/servers/recon_view"]["text"] = __('Recon view');
 	$sub["operation/servers/recon_view"]["refr"] = 0;
 	
+	
+	//SNMP Console
+	$sub["operation/snmpconsole/snmp_view"]["text"] = __('SNMP console');
+	$sub["operation/snmpconsole/snmp_view"]["refr"] = 0;
+	$sub["operation/snmpconsole/snmp_view"]["subsecs"] = array("enterprise/godmode/snmpconsole",
+														"godmode/snmpconsole/snmp_trap_editor",
+														"godmode/snmpconsole/snmp_alert",
+														"godmode/snmpconsole/snmp_filters");
+	
+	$sub2 = array();
+	
+	$sub2["godmode/snmpconsole/snmp_alert"]["text"] = __("SNMP alerts");
+	$sub2['godmode/snmpconsole/snmp_filters']['text'] = __('SNMP filters');	
+	enterprise_hook ('snmpconsole_submenu');	
+	
+	$sub["operation/snmpconsole/snmp_view"]["sub2"] = $sub2;
+	
+	$sub['godmode/snmpconsole/snmp_trap_generator']['text'] = __('SNMP trap generator');
+	$sub["godmode/snmpconsole/snmp_trap_generator"]["refr"] = 0;
+		
 	$menu["estado"]["sub"] = $sub;
 	//End of view agents
 	
